Document health check contract and regional incident response
- Define the `/health` endpoint behavior, including 503 status for stalled update batches.
- Add operational guides for investigating unhealthy regions using SSM, CloudWatch, and AWS CLI.
- Provide recommended JVM diagnostic flags for GC and heap dump analysis.
- Update troubleshooting sections for deployment verification failures.